# VanKVulkanTemplate

./: .gitignore  CMakeLists.txt  README.md
config/: config-win - shaderc.bat  config-win - slang.bat  config-win.bat
resources/: Info.plist
shaders/: shader.comp.glsl  shader.frag.glsl  shader.vert.glsl
src/: Buffer.cpp  Buffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Texture.cpp  Texture.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanTexture.cpp  VulkanTexture.h  debug_util.h  logger.h  minimal_latest.cpp
